# wallet-key-validator-kit

./: .gitignore  .spi.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Package.swift  README.md  SECURITY.md  WalletKeyValidatorKit.podspec  build.gradle.kts  go.mod  keyvalidator.go  keyvalidator_test.go  llms.txt  package-lock.json  package.json  pubspec.yaml  pyproject.toml  settings.gradle.kts
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dependency-audit.yml  npm-publish.yml  pages.yml  release.yml
Sources/WalletKeyValidatorKit/: WalletKeyValidatorKit.swift
Tests/WalletKeyValidatorKitTests/: WalletKeyValidatorKitTests.swift
docs/: index.html  llms-full.txt  llms.txt  robots.txt  sitemap.xml
docs/benchmarks/: index.html
docs/comparisons/: index.html  wallet-key-validator-kit-vs-bitcoinjs-lib.html
docs/dart/: index.html
docs/go/: index.html
docs/javascript/: index.html
docs/kotlin/: index.html
docs/python/: index.html
docs/rust/: index.html
docs/security/: offline-only.md  threat-model.md
docs/swift/: index.html
examples/: run-examples.sh
examples/cli/: README.md  run.sh
examples/node/: README.md  example.mjs
lib/: wallet_key_validator_kit.dart
python/tests/: test_validator.py
python/wallet_key_validator_kit/: __init__.py  validator.py
scripts/: benchmark.mjs
src/: base58.js  chains.js  index.js  lib.rs
src/main/kotlin/com/devdasx/walletkeyvalidatorkit/: WalletKeyValidatorKit.kt
test/: fuzz-smoke.test.js  validator.test.js  wallet_key_validator_kit_test.dart
test-vectors/: public-vectors.json
(+1 files in other folders)
