[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wallet-key-validator-kit"
version = "0.2.0"
description = "Validate private keys, WIF, and HD wallet extended keys offline."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "devdasx" }]
keywords = ["private-key", "wif", "xpub", "zpub", "xprv", "zprv", "hd-wallet"]

[tool.setuptools.packages.find]
where = ["python"]
